# BEVPlace

./: .gitignore  CMakeLists.txt  RANSAC.py  dataset_loader.py  execution_times.txt  execution_times_only_first.txt  kitti_dataset.py  mag_dataset.py  main.py  main_mag.py  main_mag_gem.py  nclt_dataset.py  package.xml  rviz.rviz  test_Gpytorch.py  test_dataloader.py
datasets/: CMakeLists.txt  convert_all_groups.sh  convert_single_dir.sh  gen_bev_images.py  gen_mag_images.py  gen_mag_images_husky.py  gen_mag_images_husky_global.py  gen_mag_images_husky_local.py  gen_mag_images_husky_local1.py  mag2txt.py  pcdtobin.py  pointcloud_to_bev.cpp  scan_to_bev.cpp
msg/: MagPointXYZHT.msg  MagPointsXYZHT.msg
runs/Nov04_17-50-41/: events.out.tfevents.1730713841.cartin
runs/Nov04_17-52-04/: events.out.tfevents.1730713924.cartin
runs/Nov04_18-01-04/: events.out.tfevents.1730714464.cartin
runs/Nov04_18-03-45-CorridorGlobal/: events.out.tfevents.1730714625.cartin
runs/Nov04_20-02-48/: events.out.tfevents.1730721768.cartin
runs/Nov04_20-03-06/: events.out.tfevents.1730721786.cartin
runs/Nov04_20-04-57/: events.out.tfevents.1730721897.cartin  flags.json
runs/Nov04_21-01-24/: events.out.tfevents.1730725284.cartin
runs/Nov04_21-04-34/: events.out.tfevents.1730725474.cartin
runs/Nov04_21-40-14/: events.out.tfevents.1730727614.cartin
runs/Nov04_21-41-20/: events.out.tfevents.1730727680.cartin
runs/Nov04_22-02-44/: events.out.tfevents.1730728964.cartin
runs/Nov04_22-26-54/: events.out.tfevents.1730730414.cartin
runs/Nov06_15-07-17/: flags.json  (+1 more)
(+129 files in other folders)
